ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-user-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - example.com
    secretName: userapi-tls
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /user-app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-app-service
            port:
              number: 80
